syntax = "proto3";

package command;

option go_package = "github.com/satimoto/go-ocpi-api/ocpirpc";

service CommandService {
  rpc ReserveNow(ReserveNowRequest) returns (ReserveNowResponse);
  rpc StartSession(StartSessionRequest) returns (StartSessionResponse);
  rpc StopSession(StopSessionRequest) returns (StopSessionResponse);
  rpc UnlockConnector(UnlockConnectorRequest) returns (UnlockConnectorResponse);
};

message ReserveNowRequest {
  int64 user_id = 1;
  string expiry_date = 2;
  string location_uid = 3;
  string evse_uid = 4;
};

message ReserveNowResponse {
  int64 id = 1;
  string status = 2;
  int64 reservationId = 3;
  string expiry_date = 4;
  string location_uid = 5;
  string evse_uid = 6;
};

message StartSessionRequest {
  int64 user_id = 1;
  string location_uid = 2;
  string evse_uid = 3;
};

message StartSessionResponse {
  int64 id = 1;
  string status = 2;
  string authorizationId = 3;
  string location_uid = 4;
  string evse_uid = 5;
};

message StopSessionRequest { string session_uid = 1; };

message StopSessionResponse {
  int64 id = 1;
  string status = 2;
  string session_uid = 3;
};

message UnlockConnectorRequest {
  string location_uid = 1;
  string evse_uid = 2;
  string connector_uid = 3;
};

message UnlockConnectorResponse {
  int64 id = 1;
  string status = 2;
  string location_uid = 3;
  string evse_uid = 4;
  string connector_uid = 5;
};
